<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.emtesttask.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.emtesttask.ui.favs.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favs" />

    <fragment
        android:id="@+id/navigation_responses"
        android:name="com.example.emtesttask.ui.todo.ToDoFragment"
        android:label="@string/title_responses"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.emtesttask.ui.todo.ToDoFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.emtesttask.ui.todo.ToDoFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_todo" />
</navigation>